--- a/cover.css
+++ b/cover.css
@@ -125,7 +125,7 @@
 .image {
 	width: 20.5vw;
 	height: 20.5vh;
-	background: url("../multiplecircles.svg") no-repeat;
+	background: url("multiplecircles.svg") no-repeat;
 	position: absolute;
 	left:330px;
 	top: 400px;
@@ -145,7 +145,7 @@
 .image3 {
 	width: 20.5vw;
 	height: 20.5vh;
-	background: url("../multiplecircles.svg") no-repeat;
+	background: url("multiplecircles.svg") no-repeat;
 	position: absolute;
 	left:500px;
 	top: 560px;
